--- a/views/index.html
+++ b/views/index.html
@@ -1,10 +1,23 @@
 <head>
     <link rel="stylesheet" href="app.css" type="text/css" />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    </script>
 </head>
 
 <body>
-    <h1>This is the index route</h1>
+     <header>
+        <h1>todo<span>list</span></h1>
+        <h2>A simple todo list app built with node</h2>
+      </header>
+  
+      <section class="form">
+        <input type="text" id="todoInput" placeholder="Insert your task here...">
+      </section>
     
-    <p>ToDos will go here</p>
-    <script type="text/javascript" src="app.js"></script>
+      <ul class="list">
+         
+      </ul>
+      <script type="text/javascript" src="app.js"></script>
+
 </body>
